--- a/Chatter.WebClient/_Imports.razor
+++ b/Chatter.WebClient/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Chatter.WebClient
 @using Chatter.WebClient.Shared
+@using Blazored.Modal
+@using Blazored.Modal.Services
